--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://izzrieq.github.io/3D-Portfolio/index.html",
   "name": "r3f-vite-starter",
   "private": true,
   "version": "1.0.0",
@@ -6,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -b main -d dist",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@formspree/react": "^2.4.2",
@@ -14,6 +17,7 @@
     "@react-three/fiber": "8.13.3",
     "framer-motion": "^10.12.16",
     "framer-motion-3d": "^10.12.16",
+    "gh-pages": "^6.0.0",
     "gsap": "^3.12.0",
     "jotai": "^2.1.1",
     "leva": "^0.9.34",
