--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://izzrieq.github.io/3D-Portfolio/index.html",
+  "homepage": "https://izzrieq.github.io/3D-Portfolio",
   "name": "r3f-vite-starter",
   "private": true,
   "version": "1.0.0",
